@@ -23,7 +23,10 @@ VERSION 1.0.5
     - added new configuration layout pane for external applications
   [stefan kost]
     - fixed NPE in TabNumber to Model resolving code
-	- switching buffers in jEdit now activates them in the trees too.
+	- switching buffers in jEdit now activates them in the trees too
+	- switching views now corectly activates the files too (but makes
+	  projectviewer depended on jedit 4.1)
+	- switching the trees via the tabs, keeps the cur. file active in the trees
 
 VERSION 1.0.4
   [stefan kost]
